// project

plugins 
{
    id 'java-library'

    id 'eclipse'
}

group 'br.dev.pedrolamarao.sandbox'
version '1.0.0-SNAPSHOT'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

dependencies
{
    testImplementation platform(group: 'org.junit', name: 'junit-bom', version: '5.7.1')    
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter'
    testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher'
}

repositories
{
    mavenCentral()
}

// extensions

eclipse.jdt.file.withProperties 
{ 
    props -> props['org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures'] = 'enabled'
}

// tasks

compileJava.configure {
    options.verbose = false
}

compileTestJava.configure {
    options.verbose = false
	options.compilerArgs += [ '--add-modules=jdk.incubator.foreign' ]	
}

test.configure {
	jvmArgs += [ '--add-modules=jdk.incubator.foreign', '--enable-native-access=ALL-UNNAMED' ]
    useJUnitPlatform()
}
